Bump Kotlin to version 2.1.20